# pokedex_cv

./: .gitignore  README.md  pokemon_classes.yaml  pyproject.toml
annotation/: pipeline.py  schema.py
annotation/export/: to_coco.py  to_yolo.py
annotation/review/: visualize.py
annotation/stages/: __init__.py  alpha_bbox.py  composite_gen.py  feature_match.py  sam_segment.py
configs/: full_1025species.yaml  poc_20species.yaml
data_collection/: collect.py  config.yaml
data_collection/filters/: __init__.py  dedup.py  quality_check.py
data_collection/scrapers/: __init__.py  base_scraper.py  pokeapi_sprites.py
dataset/: validate.py
docs/: annotation_design.md  data_collection_design.md  pokemon_id_design.md  repository_design.md  training_design.md
pokedex_cv/: __init__.py  pokemon.py
scripts/: fetch_pokemon_names.py  run_pipeline.py
training/: evaluate.py  export.py  train.py
training/configs/: yolov8n_poc.yaml
