[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokedex-cv"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "opencv-python>=4.9",
    "albumentations>=1.4",
    "imagehash>=4.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
sam = [
    "torch>=2.2",
    "torchvision>=0.17",
    "sam2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["pokedex_cv"]

[tool.ruff]
line-length = 100
target-version = "py311"
